buildSrc/src/test/resources/test-projects/invalid-demo/demos/duplicate_two/src/nativeMain/kotlin/demos/duplicatetwo/Main.kt
package demos.duplicatetwo

fun main() {
    println("Duplicate two demo")
}
